# ghtc2020_eval

bp7compression/: Cargo.toml  Compressor Eval.ipynb  output.txt  prepare-csv.py  run.sh
bp7compression/benches/: compression.rs
bp7compression/src/: lib.rs  main.rs
