[package]
name = "bp7compression"
version = "0.1.0"
authors = ["Lars Baumgaertner <1264131+gh0st42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.0"
libflate = "0.1"
snap = "0.2"
bzip2 = "0.3.2"
miniz_oxide = "0.3"
xz2 = "0.1"
smaz = "0.1.0"
lipsum = "0.6.0"
bp7 = "0.4.7"
